2012-05-06  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp : Use only one list for root
	management.
	(*root*): Root management API simplification.

2012-04-30  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-internal.lisp: Big change to replace *current-root*
	variable to support multiple root.

2012-04-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/tools.lisp (add-new-hook, add-hook): New macro. Do not
	duplicate hooks by default. Use add-new-hook if you want to
	duplicate them.

2012-04-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-corner.lisp (wait-window-in-query-tree): Add a limit
	of try to wait the command window.

2012-02-25  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-util.lisp (place-frames-from-xrandr)
	(swap-frame-geometry, rotate-frame-geometry): New helper functions
	for multiple physical screen.
	(jump-to-slot, add-frame-in-parent-frame): Change *current-root*
	only when needed.

2012-01-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Use create-symbol and create-symbol-in-package
	instead of the shorter symb. (Thanks Aad Versteden).

	* src/bindings-second-mode.lisp (set-default-second-keys): New
	key binding to set window and frame transparency.

	* src/bindings.lisp (set-default-main-mouse): New mouse binding to
	set window and frame transparency.

	* src/clfswm-keys.lisp (define-keys): New macro to ease multiple
	keys definitions. (Thanks Valentin Plechinger for the request).

	* src/*.lisp: Add full transparency support with xcompmgr.

2012-01-14  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/*.lisp: Add transparency support.

2012-01-09  Ales Guzik <ales.guzik@gmail.com>

	* src/clfswm-layout.lisp (tile-layout-mix): New layout to
	automatically choose between vertival and horizontal tile layout.
	(tile-space-layout): Fix to have space between screen border and
	frame the same as between frames.
